List spacing; fix head titles

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -38,6 +38,9 @@ a.anchor
 p
   line-height: 1.5rem;
 
+li
+  margin: 0.5rem 0
+
 #main
   height: 100%;
   width: 100%;
@@ -93,6 +96,7 @@ p
     font-weight: 300
     display: inline
     padding: 0 1rem
+    margin-bottom: 1rem
 
   a
     transition: all 0.3s ease
